added functionality of search button and details button along with styles for responsiveness

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>Find Your Pokemon</title>
 </head>
 <body>
-  <div id="result-container"></div>
+  <div id="loader"></div>
+  <div id="result-container">
+  </div>
   <div class="pokemon-search-container">
     <input type="text" name="search-field" id="search-field" placeholder="Search your Pokemon">
     <button id="search-btn">Search</button>
